design/admin/stylesheets/pagelayout.css
/* ... */
#header-topmenu ul li span.disabled, span.disabled, ul.tabs.disabled li a
{
    color: #888;
}

#header-topmenu ul li.first a, #header-topmenu ul li.first span.disabled
{
    margin-left: 0.1em;
}

ul.tabs li.first a, ul.tabs li.first span.disabled
{
    margin-left: 0;
}

div.tab-content
{
    height: 20em;
    overflow-y: scroll;
    padding: 1em;
}

div.tabs-content.disabled div.tab-content
{
    display: none;
}


/* PATH */

#path
{
    padding: 0;
    text-align: left;
    min-height: 24px;
}

#path p { margin: 0.5em 0 0 0; }

#path span
{
    color: #333;
}



/* COLUMNS */

#columns
{
    min-height:100%;
    position:relative;
    margin: 0 auto -1px;
    background: white;
}

#maincolumn
{
    border-right: 1px #999 solid;
    margin-right: 190px;
    position: relative;
}

#maincontent
{
    margin: 0 0 0 15em;
    min-height: 200px;
    border-radius: 2px;
    position: relative;
    padding-top:1px;
    padding-bottom:1px;
}

#maincontent-design
{
    margin: 0 20px;
    background:white;
    padding: 0.8em 1.5em 10px 1.5em;
    position:relative;
}

.loginpage #maincontent-design, .loginpage #columns
{
    box-shadow: none;
    background: none;
}

#leftmenu
{
    float: left;
    width: 15em;
    min-height:100%;
    padding-top:1px;
    padding-bottom:1px;
    min-height: 400px;
    margin-bottom: 20px;
}

.leftmenu-items
{
    font-size: 1.05em;
}

.leftmenu-items li
{
    margin-bottom:0.4em;
}

#leftmenu input[type="text"]
{
    width: 90%;
}

#rightmenu
{
    float: right;
    overflow: hidden;
    width: 181px;
    border-radius: 2px 0 0 2px;
    padding-top:1px;
    padding-bottom: 1px;
    min-height: 400px;
    position: relative;
}

div#columns.hide-rightmenu div#rightmenu  { display: none; }
div#columns.hide-rightmenu div#maincolumn { margin-right: 0; }

/* PANELS SEPARATORS */
#left-panels-separator, #right-panels-separator
{
    position: absolute;
    width:50px;
    background: url(../images/3/logo_separator_sprite.png) repeat-y 0 0;
    top:0;
    bottom:0;
    z-index:1;
}

.panels-separator-top
{
    background: url(../images/3/logo_separator_sprite.png) no-repeat -57px 0;
    width:50px;
    height:21px;
    position: absolute;
    top:0;
}
.panels-separator-bottom
{
    background: url(../images/3/logo_separator_sprite.png) no-repeat -57px -79px;
    width:50px;
    height:21px;
    position: absolute;
    bottom:0;
}


#canvas-top
{
    height:20px;
    background: url(../images/3/textile.png) repeat-x;
    box-shadow: inset 0 -5px 5px -5px #000000;
}

#canvas-bottom
{
    height:20px;
    background: url(../images/3/textile.png) repeat-x;
    box-shadow: inset 0 5px 5px -5px #000000;
}

/* RIGHTMENU */

#rightmenu-design
{
    margin-left:20px;
    padding: 0.8em 1em 10px 1em;
    background:white;
    position: relative;

}

/* This is not supported by IE6, some DOM cleanup is needed to avoid it */
#rightmenu-design > div
{
    margin-top: 0.5em;
    min-width: 12em;
}

#rightmenu-design ul
{
    margin-left: 1.5em;
}

#rightmenu-design select
{
    width:145px;
}

#rightmenu label { font-weight:normal; }



/* LEFTMENU */

#leftmenu-design-wrapper
{
    position:relative;
    min-height: 100%;
}

#leftmenu-design
{
    margin-right: 20px;
    padding: 0.8em 0.8em 0.8em 0.8em;
    background:white;
    min-height: 100%;
    position: relative;
    min-height: 350px;
}

#leftmenu-design ul { margin-left: 1.5em; color: #aaa; }
div.box-header { margin-top: 0.5em; }




div#leftmenu div.translations label
{
    font-weight: normal;
    white-space: normal;
}

ul.leftmenu-items li a
{
    text-decoration: none;
}

ul.leftmenu-items li a:hover
{
    text-decoration: underline;
}

ul.leftmenu-items li.current a
{
    color: #E24602;
    font-weight: bold;
}

/* WIDTH CONTROL */

#widthcontrol-handler
{
    position: absolute;
    right: -30px;
    top:-20px;
    bottom: 0; /* strech div to full width of relative box */
    width: 10px;
    height: 5000px;
    cursor: col-resize;
    z-index:11;
/*    background: #f8f8f8;*/
}



/* FOOTER */

#footer
{
    padding: 0 0.8em;
    position: relative;
    display: block;
    float: none;
    clear: both;
}

#footer p {
    display: block;
    text-align: center;
}

#footer.hidden
{
    display: none;
}



/* CONTENTSTRUCTURE TREE MENU STYLES */

div#contentstructure
{
    overflow: hidden;
    padding-top: 0.5em;
}

div#contentstructure ul#content_tree_menu
{
    margin-top: 0;
    margin-left: 0.25em;
    padding-left: 0.5em;
}

div#contentstructure ul#content_tree_menu ul
{
    margin: 0;
    padding-top: 4px;
    padding-bottom: 0;
}

div#contentstructure ul#content_tree_menu ul ul
{
    margin-left: 0;
}

div#contentstructure ul#content_tree_menu li
{
    list-style-type: none;
    white-space: nowrap;
    position: relative;
}

div#contentstructure ul#content_tree_menu ul li
{
    margin: 0;
    padding-top: 0;
    padding-left: 20px;
    padding-bottom: 4px;
    background-image: url(../images/bg_content_tree_li.png);
    background-repeat: no-repeat;
}

div#contentstructure ul#content_tree_menu ul li.lastli
{
    background-position: left -9990px;
    padding-bottom: 2px;
}

div#contentstructure ul#content_tree_menu li img
{
    vertical-align: middle;
}

div#contentstructure a.nodeicon
{
    margin-left: 0;
    padding-left: 0;
}

div#contentstructure li span.node-name-normal
{
    font-weight: normal;
    font-size:1.05em;
}

div#contentstructure li.currentnode > a.image-text span.node-name-normal, div#contentstructure li.currentnode > a.image-text span.node-name-hidden, div#contentstructure li.currentnode > a.image-text span.node-name-hiddenbyparent /* Highlighting of current node */
{
    color: #E24602;
    padding: 0 0.25em 0 0.2em;
}

div#contentstructure li a.image-text span.node-name-hidden, div#contentstructure li.currentnode li a.image-text span.node-name-hidden
{
    font-weight: normal;
    font-style: normal;
    background-color: #ddd;
    padding: 0 0.2em 0 0.2em;
}
/* ... */

